--- a/css/gaia/input_areas.css
+++ b/css/gaia/input_areas.css
@@ -58,7 +58,7 @@ textarea[disabled] {
 .skin-dark input[type="url"],
 .skin-dark input[type="number"],
 .skin-dark textarea  {
-  color: #333;
+  color: #fff;
   background-color: transparent;
   border-color: #454545;
 }
