--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,23 @@
+/*
+ * OpenPGP - PGP enryption  for Firefox OS
+ * Copyright (C) 2015 Aronne Brivio
+ *
+ * This file is part of OpenPGP.
+ *
+ * OpenPGP is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * OpenPGP is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with OpenPGP.  If not, see <http://www.gnu.org/licenses/>.
+ */
+
 [data-position="right"] {
 	position: absolute;
 	top: 0;
